# core

./: .hgignore  .hgsub  .hgsubstate  install.org  readme.org  skelfile  system-index.txt  tests.org  todo.org
emacs/: default.el  early-init.el  ellis.el  init.el  keys.el  makefile  util.el
emacs/lib/: inbox.el  make-skeleton.el  publish.el  sk.el  ulang.el
lisp/: btrfs.asd  core.asd  lisp.sk  prelude.asd  rdb.asd  rocksdb.asd  std.asd  system-index.txt
lisp/app/: app.asd  cli.lisp  gui.lisp  web.lisp
lisp/app/cli/: cli.asd  homer.lisp  organ.lisp  packy.lisp  rdb.lisp  skel.lisp
lisp/app/gui/: skel.lisp
lisp/app/web/: dash.lisp  index.lisp  web.asd
lisp/ffi/: btrfs.asd  quiche.asd  quiche.lisp  rocksdb.asd  tree-sitter.asd  uring.asd  uring.lisp
lisp/ffi/alpm/: alpm.asd  constants.lisp  pkg.lisp  readme.org  tests.lisp
lisp/ffi/blake3/: blake3.asd  constants.lisp  pkg.lisp  tests.lisp
lisp/ffi/bqn/: bqn.asd  constants.lisp  pkg.lisp  tests.lisp
lisp/ffi/btrfs/: btrfs.asd  constants.lisp  pkg.lisp  tests.lisp
lisp/ffi/k/: constants.lisp  k.asd  pkg.lisp  tests.lisp
lisp/ffi/quiche/: quiche.asd  quiche.lisp
lisp/ffi/rocksdb/: constants.lisp  db.lisp  macs.lisp  opts.lisp  pkg.lisp  rocksdb.asd  rocksdb.lisp  sst.lisp  system-index.txt  tests.lisp  types.lisp  vars.lisp
lisp/ffi/ssh2/: constants.lisp  pkg.lisp  ssh2.asd  tests.lisp
lisp/ffi/tree-sitter/: api.lisp  constants.lisp  ffi.lisp  lang.lisp  pkg.lisp  tests.lisp  tree-sitter.asd  tree-sitter.lisp  wrapper.c
lisp/ffi/uring/: constants.lisp  pkg.lisp  tests.lisp  uring.asd  uring.lisp
lisp/ffi/xkb/: constants.lisp  pkg.lisp  tests.lisp  xkb.asd
lisp/ffi/zstd/: constants.lisp  pkg.lisp  tests.lisp  zstd.asd
lisp/lib/: cli.asd  rt.asd  sxp.asd
lisp/lib/cli/: ansi.lisp  api.lisp  cli.asd  ed.lisp  env.lisp  pkg.lisp  progress.lisp  prompt.lisp  repl.lisp  spark.lisp  tests.lisp
lisp/lib/dat/: arff.lisp  bencode.lisp  csv.lisp  dat.asd  ical.lisp  json.lisp  pkg.lisp  proto.lisp  sxp.lisp  tests.lisp  toml.lisp  vcard.lisp  xml.lisp
lisp/lib/doc/: comp.lisp  doc.asd  err.lisp  file.lisp  package.lisp  pkg.lisp  symbol.lisp  system.lisp  tests.lisp
lisp/lib/dot/: dot.asd  dot.lisp  pkg.lisp  tests.lisp
lisp/lib/gui/: client.lisp  err.lisp  ext.lisp  gui.asd  pkg.lisp  server.lisp  tests.lisp  wm.lisp
lisp/lib/log/: err.lisp  log.asd  log.lisp  pkg.lisp  source.lisp  tests.lisp
lisp/lib/net/: err.lisp  fetch.lisp  net.asd  obj.lisp  pkg.lisp  tcp.lisp  tests.lisp  udp.lisp
lisp/lib/nlp/: data.lisp  dbscan.lisp  doc.lisp  nlp.asd  pkg.lisp  readme.org  section.lisp  tests.lisp  textrank.lisp  tokenize.lisp
lisp/lib/organ/: cli.lisp  document.lisp  element.lisp  err.lisp  heading.lisp  lalr.lisp  lexer.lisp  macs.lisp  organ.asd  organ.lisp  pkg.lisp  proto.lisp  readme.org  section.lisp  tests.lisp  tests.org  util.lisp  vars.lisp
lisp/lib/packy/: cli.lisp  db.lisp  obj.lisp  packy.asd  pkg.lisp  proto.lisp  readme.org  tests.lisp
lisp/lib/parse/: lalr.lisp  lex.lisp  parse.asd  pkg.lisp  tests.lisp  yacc.lisp
lisp/lib/pod/: api.lisp  err.lisp  obj.lisp  pkg.lisp  pod.asd  podman.lisp  tests.lisp  util.lisp
lisp/lib/pwn/: diz.lisp  pkg.lisp  pwn.asd
lisp/lib/rdb/: err.lisp  macs.lisp  obj.lisp  pkg.lisp  proto.lisp  raw.lisp  rdb.asd  rdb.lisp  sst.lisp  tests.lisp  util.lisp
lisp/lib/rt/: bench.lisp  cover.lisp  err.lisp  flamegraph.lisp  pkg.lisp  rt.asd  tests.lisp  trace.lisp
lisp/lib/skel/: cli.lisp  comp.lisp  core.lisp  pkg.lisp  readme.org  skel.asd  skel.sk  tests.lisp
lisp/lib/sxp/: sxp.asd  (+4 more)
lisp/rdb/: rdb.lisp
lisp/rocksdb/: rdb.lisp  rocksdb.lisp  tests.lisp
lisp/std/: alien.lisp  all.lisp  ana.lisp  base.lisp  cli.lisp  cond.lisp  err.lisp  fmt.lisp  fs.lisp  fu.lisp  gui.lisp  list.lisp  log.lisp  named-readtables.lisp  pan.lisp  pkg.lisp  readtable.lisp  rt.lisp  std.asd  str.lisp  sxp.lisp  sym.lisp  system-index.txt  tbl.lisp  tests.lisp  thread.lisp  util.lisp
lisp/sxp/: bench.lisp  sxp.lisp
rust/: Cargo.toml  rust.sk  rustfmt.toml
rust/app/cli/alik/: Cargo.toml  main.rs
rust/app/cli/cc-init/: Cargo.toml  build.rs  main.rs
rust/app/cli/krypt/: Cargo.toml  main.rs
rust/app/cli/mailman/: Cargo.toml  main.rs
rust/app/cli/tz/: Cargo.toml  main.rs
rust/app/tz/: Cargo.toml  main.rs
rust/lib/audio/src/: lib.rs
rust/lib/crypto/: Cargo.toml
rust/lib/crypto/src/: lib.rs  tests.rs
rust/lib/db/: Cargo.toml
rust/lib/dl/: Cargo.toml
rust/lib/dl/src/: errors.rs  lib.rs
rust/lib/dl/tests/: download-curl-resume.rs  download-reqwest-resume.rs  read-proxy-env.rs
rust/lib/dl/tests/support/: mod.rs
rust/lib/flate/: Cargo.toml
rust/lib/flate/src/: lib.rs
rust/lib/hash/: Cargo.toml
rust/lib/hash/src/: lib.rs  tests.rs
rust/lib/krypt/: Cargo.toml  api.org  readme.org
rust/lib/krypt/src/: ks.rs  lib.rs  ss.rs  tests.rs
rust/lib/logger/: Cargo.toml
rust/lib/logger/src/: lib.rs
rust/lib/net/: Cargo.toml
rust/lib/net/src/: connection.rs  err.rs  lib.rs  server.rs
rust/lib/net/src/engine/dns/: client.rs  resolver.rs
rust/lib/net/src/engine/http/: oauth.rs
rust/lib/sxp/: Cargo.toml
rust/lib/sxp/examples/: udp.rs
rust/lib/sxp/src/: err.rs  fmt.rs  io.rs  lib.rs  nostd.rs  read.rs  ser.rs  tok.rs
rust/lib/sxp/tests/: de.rs
rust/lib/tenex/: Cargo.toml
rust/lib/tenex/examples/: freesound.rs
rust/lib/tenex/models/aws/: Cargo.toml  lib.rs
rust/lib/tenex/models/freesound/: Cargo.toml  lib.rs
rust/lib/tenex/models/freesound/examples/: get-random.rs
rust/lib/tenex/models/gitlab/: Cargo.toml  lib.rs
rust/lib/tenex/models/ipapi/: Cargo.toml  lib.rs
rust/lib/tenex/models/nws/: Cargo.toml  lib.rs
rust/lib/tenex/src/: lib.rs  util.rs
rust/lib/tenex/util/: Cargo.toml  lib.rs
rust/lib/util/: Cargo.toml
rust/lib/util/src/: cli.rs  fmt.rs  lib.rs  tests.rs  time.rs
rust/lib/util/src/bs/: git.rs  version.rs
rust/sys/btrfs/: build.rs  lib.rs
rust/sys/btrfsutil/: Cargo.toml  build.rs
rust/sys/btrfsutil/src/: lib.rs
rust/sys/rocksdb/: Cargo.toml  build.rs
rust/sys/rocksdb/src/: lib.rs  test.rs
(+89 files in other folders)
