[package]
name = "sxp"
version = "0.1.0"
edition = "2021"
description = "S-eXPressions"
categories = ["encoding", "parser-implementations", "no-std"]

[features]
default = ["std"]
std = ["serde/std"]
alloc = ["serde/alloc"]
# TODO
order = ["indexmap", "std"]

[dependencies]
itoa = "1"
ryu = "1"
serde = { version = "1", default-features = false }
indexmap = { version = "2", optional = true }

[dev-dependencies]
serde_derive = "1"
rand = "0.8.5"
