[package]
name = "rocksdb-sys"
version = "0.1.0+8.8.1"
edition = "2021"
description = "based on https://github.com/rust-rocksdb/rust-rocksdb"
links = "rocksdb"

[dependencies]
libc = "0.2"

[dev-dependencies]
const-cstr = "0.3"
uuid = { version = "1.0", features = ["v4"] }

[build-dependencies]
bindgen = { version = "0.69", default-features = false, features = ["runtime"] }
