[package]
name = "alik-cli"
version = "0.1.0"
edition = "2021"
description = "Helper of Man"
[[bin]]
name = "krypt"
path = "main.rs"
[dependencies]
krypt = { path = "../../../lib/krypt" }
util = { path = "../../../lib/util", features = ["cli"] }
logger = { path = "../../../lib/logger" }
obj = { path = "../../../lib/obj" }
net = { path = "../../../lib/net" }
tenex = { path = "../../../lib/tenex" }
tokio = { version = "1.34.0", features = ["full"] }
clap = { version = "4.4.10", features = ["derive","env","string"] }
[build-dependencies]
util = { path = "../../../lib/util", features = ["bs"] }
