[package]
name = "cc-init"
version = "0.1.0"
edition = "2021"
description = "This program is used to bootstrap a complete and compliant system."
[[bin]]
name = "cc-init"
path = "main.rs"
[dependencies]
util = { path = "../../../lib/util", features = ["full"] }
flate = { path = "../../../lib/flate" }
logger = { path = "../../../lib/logger" }
obj = { path = "../../../lib/obj" }
clap = { version = "4.4.10", features = ["derive","env","string"] }
net = { path = "../../../lib/net" }
dl = { path = "../../../lib/dl" }
tokio = { version = "1.34.0", features = ["full"] }
[build-dependencies]
util = { path = "../../../lib/util", features = ["bs"] }