[package]
name = "mailman-cli"
version = "0.1.0"
edition = "2021"
description = "Mail client util"
[[bin]]
name = "mailman"
path = "main.rs"
[dependencies]
krypt = { path = "../../../lib/krypt" }
util = { path = "../../../lib/util", features = ["cli"] }
logger = { path = "../../../lib/logger" }
obj = { path = "../../../lib/obj" }
tokio = { version = "1.34.0", features = ["full"] }
clap = { version = "4.4.10", features = ["derive","env","string"] }
jmap-client = { version = "0.3.0", features = ["async","tokio","rustls","websockets"] }