[package]
name = "tenex-util"
version = "0.1.0"
edition = "2021"
[lib]
path = "lib.rs"
[features]
default = []
full = ["oauth2","indicatif"]
[dependencies]
oauth2 = { version = "4.4.2", features = ["rustls-tls"], optional = true }
indicatif = { version = "0.17.7", optional = true }
futures-util = "0.3.29"
