[package]
name = "aws"
version = "0.1.0"
edition = "2021"
[lib]
name = "aws"
path = "lib.rs"
[dependencies]
aws-config = { version= "1.0.1", features = ["behavior-version-latest"] }
# aws-sdk-ec2 = "1.3.0" - causes zor to crash during compile :C
aws-sdk-iam = "1.3.0"
aws-sdk-route53 = "1.2.0"
tokio = { version = "1", features = ["full"] }
