[package]
name = "freesound"
version = "0.1.0"
edition = "2021"
[lib]
name = "freesound"
path = "lib.rs"
[dependencies]
tenex-util = { path = "../../util", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.33", features = ["full"] }
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"] }