[package]
name = "nws"
version = "0.1.0"
edition = "2021"
[lib]
name = "nws"
path = "lib.rs"
[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
log = "0.4.20"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
